--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/MrcDbs/fifa-BE#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "npm": "^9.6.6"
   }
 }
